# gemini2.0-voice-agent

./: Dockerfile  Makefile  README.md
backend/: .env.local  .gitignore  multimodal-live-types.ts  package.json
backend/src/: index.ts
backend/src/audio/: processor.ts  state.ts
backend/src/services/: speech.ts  summarize.ts
backend/src/types/: audio.d.ts  multimodal-live-api.d.ts  type-guards.ts
frontend/: package-lock.json  tsconfig.json
frontend/src/: App.tsx  index.css
frontend/src/components/: ControlPanel.tsx  Summarizer.tsx  TranscriptionDisplay.tsx
frontend/src/contexts/: LiveAPIContext.tsx
frontend/src/hooks/: use-live-api.ts
frontend/src/lib/: audio-recorder.ts  audio-streamer.ts  utils.ts
voice-agent/: Dockerfile  Makefile  README.md  function.js  index.html  multimodal-live-types.ts  package-lock.json  package.json  tailwind.config.js  vite.config.ts
voice-agent-py/backend/: pyproject.toml
voice-agent-py/frontend/: cookieJar.js  gemini-live-api.js  index.html  live-media-manager.js  pcm-processor.js  script.js  styles.css
voice-agent/backend/: .env.temlpate  biome.json  package-lock.json  package.json
voice-agent/backend/src/: index.ts
voice-agent/frontend/: biome.json  multimodal-live-types.ts  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json
voice-agent/frontend/src/: App.tsx  index.css  main.tsx
voice-agent/src/: App.tsx
voice-agent/src/contexts/: LiveAPIContext.tsx
voice-agent/src/hooks/: use-live-api.ts
voice-agent/stt_test/: index.js  package-lock.json  package.json
(+22 files in other folders)
