[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["ShintaroMorimoto <mrmtsntr1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
websockets = "14.1"
asyncio = "3.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
